vevise myaccount.html, add basic personal info , reservation add another version model.py

--- a/Library-Management/management/templates/myaccount.html
+++ b/Library-Management/management/templates/myaccount.html
@@ -7,6 +7,32 @@
 <div class="container">
     <div class="row">
         <div class="col-md-9 col-md-offset-1">
+        <h3> 我的基本信息 </h3>
+        </div>
+        <div class="col-md-9 col-md-offset-1">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>姓名</th>
+                        <th>昵称</th>
+                        <th>电话</th>
+                        <th>E-mail</th>
+                        <th>地址</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ user.user.username }}</td>
+                        <td>{{ user.nickname }}</td>
+                        <td>{{ user.nickname }}</td>
+                        <td>{{ user.nickname }}</td>
+                        <td>{{ user.nickname }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <div class="col-md-9 col-md-offset-1">
         <h3> 借阅历史 </h3>
         </div>
         <div class="col-md-9 col-md-offset-1">
@@ -42,7 +68,33 @@
                 </tbody>
              </table>
             </div>
+        <div class="col-md-9 col-md-offset-1">
+        <h3> 预约请求 </h3>
         </div>
+        <div class="col-md-9 col-md-offset-1">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>No.</th>
+                        <th>书名</th>
+                        <th>预约有效期</th>
+                        <th>请求状态</th>
+                        <th>地址</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>{{ user.user.username }}</td>
+                        <td>{{ user.nickname }}</td>
+                        <td>{{ user.nickname }}</td>
+                        <td>{{ user.nickname }}</td>
+                        <td>{{ user.nickname }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
     </div>
+</div>
 
 {% endblock %}
