--- a/Library-Management/management/templates/detail.html
+++ b/Library-Management/management/templates/detail.html
@@ -7,7 +7,6 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-10 col-md-offset-1">
-            
 			<div class="col-md-5">
 				{% if img_list %}
 					<div id="carousel-generic" class="carousel slide" data-ride="carousel">
@@ -36,8 +35,11 @@
 			</div>
 			<div class="col-md-6 col-md-offset-1">
 				<h3 align='center'>{{book.name}}</h3>
-                <h4 align='right'>- {{book.pubDate|date:"Y-m-d"}} </h4>
-				<h4>By {{book.author}}</h4>
+                <h4 align='right'>By {{book.author}}</h4>
+                <h4>ISBN：{{ book.isbn }}</h4>
+                <h4>出版时间：{{book.pubDate|date:"Y-m-d"}} </h4>
+                <h4>出版社：{{ book.publisher }}</h4>
+                <h4>图书类型：{{ book.typ }}</h4>
 				<h4>Price：{{ book.price|floatformat:2 }}</h4>
                 {% for i in rate_loop %}
                     <span class="glyphicon glyphicon-star" aria-hidden="true"></span>
@@ -46,14 +48,46 @@
                     <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
                 {% endfor %}
                 <br>
-                {% for bt in book_t %}
-                <p> {{bt.desc}}
-                </p>
-                {% endfor %}
                 <br>
-                <p><a class="btn btn-primary" href="#" role="button">Reserve this book &raquo;</a></p>
+                <p><a class="btn btn-primary" href="#" role="button">预约 &raquo;</a></p>
             </div>
 		</div>
+        <div class="col-md-9 col-md-offset-1 book_container">
+            <h3 id="left">详情</h3>
+        </div>
+        {% if book.desc %}
+        <div class="col-md-9 col-md-offset-1">
+            <p> {{book.desc}}</p>
+        </div>
+        {% else %}
+        <div class="col-md-9 col-md-offset-1">
+            <p>暂无描述</p>
+        </div>
+        {% endif %}
+
+
+        <div class="col-md-9 col-md-offset-1 book_container">
+            <h3 id="left">评论</h3>
+        </div>
+        {% for eval in book_eval %}
+        <div class="col-md-9 col-md-offset-1">
+            <p> {{eval.evalDesc}}</p><br />
+            <p class="eval_date"> by {{eval.user.username}} {{eval.evalDate}}</p>
+        </div>
+        {% empty %}
+        <div class="col-md-9 col-md-offset-1">
+            <p>暂无评价</p>
+        </div>
+        {% endfor %}
+
+        <div class="col-md-9 col-md-offset-1">
+            <h3 class="headline">添加评论</h3>
+            <form role="form" method="post" name="comment_form">
+                {% csrf_token %}
+                <textarea type="text" id="comment_input" name="comment"></textarea>
+                <button class="btn btn btn-primary" type="submit">提交</button>
+            </form>
+        </div>
 	</div>
 </div>
 
