--- a/Library-Management/management/static/css/base.css
+++ b/Library-Management/management/static/css/base.css
@@ -4,6 +4,25 @@ body
     background-color: #fff;
 }
 
+#left
+{
+    float:left;
+}
+
+.book_container {
+    margin-bottom: 5px;
+    border-bottom: 1px solid  #999999;
+}
+.eval_date {
+    text-align:right;
+    border-bottom:1px dashed #825d5b;
+}
+
+#right
+{
+    float: right;
+}
+
 #header-base
 {
     margin-bottom: 10px;
@@ -15,4 +34,10 @@ body
 {
 	color: #fff;
 	font-weight: bold;
+}
+textarea
+{
+	width:100%;
+	height:100px;
+	border:1px solid #999999;
 }
