--- a/Library-Management/management/templates/addbook.html
+++ b/Library-Management/management/templates/addbook.html
@@ -23,6 +23,13 @@
 					</div>	
 				</div>
 
+                <div class="form-group">
+					<label for="id_author" class="col-md-3 control-label">ISBN：</label>
+					<div class="col-md-9">
+						<input type="text" class="form-control" required name="isbn" id="id_isbn">
+					</div>
+				</div>
+
 				<div class="form-group">
 					<label for="id_author" class="col-md-3 control-label">作者：</label>
 					<div class="col-md-9">
@@ -48,6 +55,13 @@
 					<label for="id_pubdate" class="col-md-3 control-label">出版日期：</label>
 					<div class="col-md-9">
 						<input type="date" class="form-control" required name="pubdate" id="id_pubdate">
+					</div>
+				</div>
+
+                <div class="form-group">
+					<label for="id_pubdate" class="col-md-3 control-label">出版社：</label>
+					<div class="col-md-9">
+						<input type="text" class="form-control" required name="publisher" id="id_publisher">
 					</div>
 				</div>
 
