--- a/Library-Management/management/templates/myaccount.html
+++ b/Library-Management/management/templates/myaccount.html
@@ -7,93 +7,68 @@
 <div class="container">
     <div class="row">
         <div class="col-md-9 col-md-offset-1">
-        <h3> 我的基本信息 </h3>
+            <h3 id="left"> 我的基本信息 </h3>
+            <p id="right"><a class="btn btn-primary" id="id_revise" href="/modifybaseinfo/" role="button">编辑</a></p>
         </div>
-        <div class="col-md-9 col-md-offset-1">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>姓名</th>
-                        <th>昵称</th>
-                        <th>电话</th>
-                        <th>E-mail</th>
-                        <th>地址</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>{{ user.user.username }}</td>
-                        <td>{{ user.nickname }}</td>
-                        <td>{{ user.nickname }}</td>
-                        <td>{{ user.nickname }}</td>
-                        <td>{{ user.nickname }}</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <br />
 
-        <div class="col-md-9 col-md-offset-1">
-        <h3> 借阅历史 </h3>
-        </div>
-        <div class="col-md-9 col-md-offset-1">
-            <table class="table table-hover">
-                <thead>
-                    <tr>
-                        <th>No.</th>
-                        <th>书名</th>
-                        <th>借书日期</th>
-                        <th>归还日期</th>
-                        <th>应还日期</th>
-                        <th>过期天数</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    
-                    {% for bi, dl, fi in zipl %}
-                    <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td>{{ bi.book.name }}</td>
-                        <td>{{ bi.BorrowDate|date:"Y-m-d" }}</td>
-                        <td>{{ bi.ReturnDate|date:"Y-m-d" }}</td>
-                        <td>{{ dl|date:"Y-m-d" }}</td>
-                        <td>$ {{ fi }}</td>
-                    </tr>
-                    {% empty %}
-                    <tr>
-                        <td>没有借阅记录</td>
-                    </tr>
-                    {% endfor %}
-                   
-                    
-                </tbody>
-             </table>
+        <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+            <div class="form-horizontal">
+                <div class="form-group">
+					<label for="id_author" class="col-md-3 control-label">姓名：</label>
+					<div class="col-md-9">
+						<p  id="id_username">{{user.user.username }}</p>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="id_typ" class="col-md-3 control-label">昵称：</label>
+					<div class="col-md-9">
+						<p id="id_nickname">{{ user.nickname }}</p>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="id_price" class="col-md-3 control-label">E-mail：</label>
+					<div class="col-md-9">
+						<p id="id_email">{{ user.user.email }}</p>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="id_pubdate" class="col-md-3 control-label">电话：</label>
+					<div class="col-md-9">
+						<p id="id_phone" >{{user.phone }}</p>
+					</div>
+				</div>
+                <div class="form-group">
+					<label for="id_pubdate" class="col-md-3 control-label">地址：</label>
+					<div class="col-md-9">
+						<p id="id_address">{{ user.address }}</p>
+					</div>
+				</div>
             </div>
-        <div class="col-md-9 col-md-offset-1">
-        <h3> 预约请求 </h3>
         </div>
         <div class="col-md-9 col-md-offset-1">
+            <h3 id="left"> 我的流通 </h3>
+        </div>
+        <br />
+        <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
             <table class="table table-hover">
-                <thead>
                     <tr>
-                        <th>No.</th>
-                        <th>书名</th>
-                        <th>预约有效期</th>
-                        <th>请求状态</th>
-                        <th>地址</th>
+                        <th>外借</th>
+                        <td><a href="/borrow/">{{ borrow_num }}</a></td>
                     </tr>
-                </thead>
-                <tbody>
                     <tr>
-                        <td>{{ user.user.username }}</td>
-                        <td>{{ user.nickname }}</td>
-                        <td>{{ user.nickname }}</td>
-                        <td>{{ user.nickname }}</td>
-                        <td>{{ user.nickname }}</td>
+                        <th>借阅历史</th>
+                        <td><a href="/borrowhistory/">{{ borrowhistory_num }}</a></td>
                     </tr>
-                </tbody>
+                    <tr>
+                        <th>预约请求</th>
+                        <td><a href="/reservation/" >{{ reservation_num }}</a></td>
+                    </tr>
             </table>
         </div>
-
     </div>
 </div>
 
