reservation, borrow, return book

--- a/Library-Management/management/templates/base.html
+++ b/Library-Management/management/templates/base.html
@@ -40,7 +40,7 @@
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						{% if user %}
-							<li><p class="navbar-text">欢迎&nbsp;&nbsp;<span id="base_name">{{ user.nickname }}</span></p></li>
+							<li><p class="navbar-text">欢迎&nbsp;&nbsp;<span id="base_name">{{ user.name }}</span></p></li>
                             <li><a href="/myaccount/">我的账户</a></li>
 							<li><a href="/logout/">退出</a></li>
 							<li><a href="/setpasswd/">修改密码</a></li>
