--- a/Library-Management/management/static/css/base.css
+++ b/Library-Management/management/static/css/base.css
@@ -9,6 +9,9 @@ body
     float:left;
 }
 
+.div-img{width:80px; height:120px;overflow:hidden}
+.my-img{max-width:80px;_width:expression(this.width > 80 ? "80px" : this.width);}
+
 .book_container {
     margin-bottom: 5px;
     border-bottom: 1px solid  #999999;
