--- a/Library-Management/management/templates/borrow.html
+++ b/Library-Management/management/templates/borrow.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-9 col-md-offset-1">
-        <h3> 借阅历史 </h3>
+        <h3> 外借列表 </h3>
         </div>
         <div class="col-md-9 col-md-offset-1">
             <table class="table table-hover">
@@ -19,17 +19,23 @@
                         <th>归还日期</th>
                         <th>应还日期</th>
                         <th>罚款</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for bi, dl, fi in zipl %}
                     <tr>
                         <td>{{ forloop.counter }}</td>
-                        <td><a href="/viewbook/detail/?isbn={{bi.book.isbn}}">{{ bi.book.name }}</a></td>
+                        <td><a href="/viewbook/detail/?isbn={{bi.bookcopy.book.isbn}}">{{ bi.bookcopy.book.name }}</a></td>
                         <td>{{ bi.BorrowDate|date:"Y-m-d" }}</td>
                         <td>{{ bi.ReturnDate|date:"Y-m-d" }}</td>
                         <td>{{ dl|date:"Y-m-d" }}</td>
                         <td>$ {{ fi }}</td>
+                        <td>
+                            <div class="col-md-1">
+                                <p><a class="btn btn-primary" href="/borrow/?id={{ bi.bookcopy.id }}" role="button">还书</a></p>
+                            </div>
+                        </td>
                     </tr>
                     {% empty %}
                     <tr>
