--- a/Library-Management/management/templates/viewbook.html
+++ b/Library-Management/management/templates/viewbook.html
@@ -6,7 +6,7 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-md-10 col-md-offset-1">
+		<div class="col-md-12 col-md-offset-0">
 			<div class="col-md-2">
 				<div class="list-group">
 					<a href="/viewbook/" class="list-group-item" id="id_typ_all">
@@ -24,7 +24,7 @@
 				    act_typ.setAttribute("class",new_class);
 				</script>
 			</div>
-			<div class="col-md-9 col-md-offset-1">
+			<div class="col-md-9 col-md-offset-0">
 				<div class="col-md-4 col-md-offset-8">
 					<form role="form" method="post" name="search_form">
 						{% csrf_token %}
@@ -42,24 +42,38 @@
 						},1500);
 					}
 				</script>
+
+
 				<table class="table table-hover">
 					<thead>
 						<tr>
 							<th>No.</th>
+                            <th>封面</th>
 							<th>书名</th>
 							<th>作者</th>
+                            <th>出版社</th>
 							<th>出版日期</th>
-							<th>价钱</th>
+							<th>索书号</th>
 						</tr>
 					</thead>
 					<tbody>
-						{% for book in book_list %}
+						{% for book,img in book_img_zip %}
 						<tr>
 							<td>{{ forloop.counter }}</td>
+                            <td><div class="çol-md-1 div-img">
+                                 <img class="img-rounded my-img" src="/{{img.img}}">
+                             </div></td>
 							<td><a href="/viewbook/detail/?isbn={{book.isbn}}">{{ book.name }}</a></td>
-							<td>{{ book.author }}</td>
+							<td>{{ book.author.name }}</td>
+                            <td>{{ book.publisher.name }}</td>
 							<td>{{ book.pubDate|date:"Y-m-d" }}</td>
-							<td>{{ book.price|floatformat:2 }}</td>
+							<td>
+                                <div class="col-md-1">
+                                <p>{{book.call_number}}</p>
+                                    <a class="btn" id="id_revise" href="/viewcopies/?isbn={{book.isbn}}">馆藏复本{{ book.copies_num }}本，已借出{{ book.borrowed_num }}本</a>
+                                </div>
+
+                            </td>
 						</tr>
 						{% empty %}
 						<tr>
