--- a/Library-Management/management/static/css/base.css
+++ b/Library-Management/management/static/css/base.css
@@ -12,6 +12,13 @@ body
 .div-img{width:80px; height:120px;overflow:hidden}
 .my-img{max-width:80px;_width:expression(this.width > 80 ? "80px" : this.width);}
 
+.detail-img{width:100px; height:150px;overflow:hidden}
+.book-img{max-width:100px;_width:expression(this.width > 100 ? "100px" : this.width);}
+
+h3{
+    font-weight:bold;
+}
+
 .book_container {
     margin-bottom: 5px;
     border-bottom: 1px solid  #999999;
