--- a/Library-Management/management/templates/borrowhistory.html
+++ b/Library-Management/management/templates/borrowhistory.html
@@ -15,6 +15,7 @@
                     <tr>
                         <th>No.</th>
                         <th>书名</th>
+                        <th>分馆</th>
                         <th>借书日期</th>
                         <th>归还日期</th>
                         <th>应还日期</th>
@@ -26,6 +27,17 @@
                     <tr>
                         <td>{{ forloop.counter }}</td>
                         <td><a href="/viewbook/detail/?isbn={{bi.bookcopy.book.isbn}}">{{ bi.bookcopy.book.name }}</a></td>
+                        <td>
+                        {% ifequal bi.bookcopy.collection_loc 'east' %}
+                                东校区流通
+                            {% endifequal %}
+                            {% ifequal bi.bookcopy.collection_loc 'north' %}
+                                北校区流通
+                            {% endifequal %}
+                            {% ifequal bi.bookcopy.collection_loc 'south' %}
+                                南校区流通
+                            {% endifequal %}
+                        </td>
                         <td>{{ bi.BorrowDate|date:"Y-m-d" }}</td>
                         <td>{{ bi.ReturnDate|date:"Y-m-d" }}</td>
                         <td>{{ dl|date:"Y-m-d" }}</td>
