--- a/Library-Management/management/templates/myaccount.html
+++ b/Library-Management/management/templates/myaccount.html
@@ -12,48 +12,46 @@
         </div>
         <br />
 
-        <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
-            <div class="form-horizontal">
-                <div class="form-group">
-					<label for="id_author" class="col-md-3 control-label">姓名：</label>
-					<div class="col-md-9">
-						<p  id="id_username">{{user.user.username }}</p>
-					</div>
-				</div>
+        <div class="col-md-6 col-md-offset-2 col-sm-10 col-sm-offset-1">
+            <table class="table table-hover">
+                    <tr>
+                        <th>读者证号：</th>
+                        <td>{{ user.user.username }}</td>
+                        <th>姓名：</th>
+                        <td>{{ user.name }}</td>
+                    </tr>
+                    <tr>
+                        <th>电话：</th>
+                        <td>{{ user.phone }}</td>
+                        <th>邮箱：</th>
+                        <td>{{ user.user.email }}</td>
+                    </tr>
+                    <tr>
+                        <th>专业：</th>
+                        <td>{{ user.major }}</td>
+                        <th>学院：</th>
+                        <td>{{ user.academy }}</td>
+                    </tr>
+                    <tr>
+                        <th>地址：</th>
+                        <td>{{ user.address }}</td>
+                        <th>学历：</th>
+                        <td>{{ user.education }}</td>
+                    </tr>
+                    <tr>
+                        <th>政治面貌：</th>
+                        <td>{{ user.politics }}</td>
+                        <th>身份证号：</th>
+                        <td>{{ user.education }}</td>
+                    </tr>
+            </table>
 
-				<div class="form-group">
-					<label for="id_typ" class="col-md-3 control-label">昵称：</label>
-					<div class="col-md-9">
-						<p id="id_nickname">{{ user.nickname }}</p>
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label for="id_price" class="col-md-3 control-label">E-mail：</label>
-					<div class="col-md-9">
-						<p id="id_email">{{ user.user.email }}</p>
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label for="id_pubdate" class="col-md-3 control-label">电话：</label>
-					<div class="col-md-9">
-						<p id="id_phone" >{{user.phone }}</p>
-					</div>
-				</div>
-                <div class="form-group">
-					<label for="id_pubdate" class="col-md-3 control-label">地址：</label>
-					<div class="col-md-9">
-						<p id="id_address">{{ user.address }}</p>
-					</div>
-				</div>
-            </div>
         </div>
         <div class="col-md-9 col-md-offset-1">
             <h3 id="left"> 我的流通 </h3>
         </div>
         <br />
-        <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+        <div class="col-md-6 col-md-offset-2 col-sm-10 col-sm-offset-1">
             <table class="table table-hover">
                     <tr>
                         <th>外借</th>
