--- a/Library-Management/management/templates/reservation.html
+++ b/Library-Management/management/templates/reservation.html
@@ -14,20 +14,36 @@
                 <thead>
                     <tr>
                         <th>No.</th>
+                        <th>取书地点</th>
                         <th>书名</th>
-                        <th>预约日期</th>
-                        <th>满足日期</th>
+                        <th>预约有效期</th>
+                        <th>书所在分馆</th>
+                        <th>索书号</th>
                         <th>请求状态</th>
+                        <th>满足日期</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for res in reservation_info %}
                     <tr>
                         <td>{{ forloop.counter }}</td>
+                        <td>{{ res.loc }}</td>
                         <td><a href="/viewbook/detail/?isbn={{res.bookcopy.book.isbn}}">{{ res.bookcopy.book.name }}</a></td>
-                        <td>{{ res.resDate|date:"Y-m-d" }}</td>
-                        <td>{{ res.resDate|date:"Y-m-d" }}</td>
+                        <td>{{ res.resDate|date:"Y/m/d" }} ~ {{ res.dueDate|date:"Y/m/d" }}</td>
+                        <td>
+                            {% ifequal res.bookcopy.collection_loc 'east' %}
+                                东校区流通
+                            {% endifequal %}
+                            {% ifequal res.bookcopy.collection_loc 'north' %}
+                                北校区流通
+                            {% endifequal %}
+                            {% ifequal res.bookcopy.collection_loc 'south' %}
+                                南校区流通
+                            {% endifequal %}
+                        </td>
+                        <td>{{ res.bookcopy.book.call_number }}</td>
                         <td>{{ res.status }}</td>
+                        <td>{{ res.resDate|date:"Y/m/d" }}</td>
                     </tr>
                     {% empty %}
                     <tr>
